erDiagram
    %% Booking Core — generated by php artisan erd:generate

    customers {
        bigint id PK
        string name
        string iqama_type
        string passport_no UK
        string iqama_no UK
        string mobile_no
        string ref_iqama_no
        string ref_mobile_no
        string ref_iqama_doc
        string address
        timestamp created_at
        timestamp updated_at
    }

    bookings {
        bigint id PK
        bigint user_id FK
        bigint customer_id FK
        bigint fingerprint_branch_id FK
        bigint district_id FK
        bigint package_id FK
        string package_name
        bigint fingerprint_charge_id FK
        bigint booking_branch_id FK
        string invoice_id UK
        bigint date_gap_id FK
        string fingerprint_location
        int pax_qty
        string discount_type
        decimal discount_value
        decimal discount_amount
        decimal total_value
        decimal profit
        string remarks
        int is_cancelled
        timestamp created_at
        timestamp updated_at
        bigint currency_rate_id FK
    }

    packages {
        bigint id PK
        string package_name
        bigint ticket_fare_id FK
        bigint ticket_fare_inbound_id FK
        bigint ticket_fare_outbound_id FK
        int is_double_ticket
        bigint visa_selling_price_id FK
        decimal regular_price
        decimal offer_price
        timestamp created_at
        timestamp updated_at
        decimal service_charge
        int is_active
    }

    passenger_statuses {
        bigint id PK
        string name UK
        string description
        timestamp created_at
        timestamp updated_at
    }

    passengers {
        bigint id PK
        bigint booking_id FK
        bigint passenger_status_id FK
        string first_name
        string last_name
        string passport_no
        string mobile_no
        date date_of_birth
        string gender
        bigint ticket_fare_id FK
        string ticket_remarks
        bigint ticket_fare_inbound_id FK
        bigint ticket_fare_outbound_id FK
        decimal package_value
        int is_ticket_held
        decimal profit
        decimal visa_profit
        timestamp visa_profit_effective_at
        decimal ticket_profit
        timestamp ticket_profit_effective_at
        decimal service_charge
        decimal booking_service_charge
        decimal extra_charge
        timestamp service_charge_effective_at
        decimal refund_payable
        int is_cancelled
        timestamp cancelled_at
        string passenger_type
        date passport_expiry
        int stay_duration
        string service_required
        date flight_date_from
        date flight_date_to
        date actual_flight_date
        string ticket_status
        string address
        timestamp created_at
        timestamp updated_at
        bigint ticket_held_by FK
        timestamp ticket_held_at
        int is_visa_held
        bigint visa_held_by FK
        timestamp visa_held_at
    }

    documents {
        bigint id PK
        string owner_type
        bigint owner_id
        string file_path
        string display_name
        timestamp created_at
        timestamp updated_at
    }

    booking_conditions {
        bigint id PK
        string title
        string description
        int is_active
        int sort_order
        timestamp created_at
        timestamp updated_at
    }

    stay_duration_limits {
        bigint id PK
        int min_days
        int max_days
        timestamp created_at
        timestamp updated_at
    }

    flight_date_gaps {
        bigint id PK
        int gap UK
        timestamp created_at
        timestamp updated_at
    }

    currency_rates {
        bigint id PK
        bigint user_id FK
        string currency
        decimal rate
        timestamp created_at
        timestamp updated_at
    }

    fingerprint_charges {
        bigint id PK
        bigint district_id FK
        bigint user_id FK
        decimal fingerprint_charge
        timestamp created_at
        timestamp updated_at
    }

    package_update_logs {
        bigint id PK
        bigint package_id FK
        bigint user_id FK
        string action
        string old_values
        string new_values
        timestamp created_at
    }

    %% Relationships
    bookings ||--|{ passengers : booking_id
    currency_rates ||--o{ bookings : currency_rate_id
    customers ||--|{ bookings : customer_id
    fingerprint_charges ||--|{ bookings : fingerprint_charge_id
    flight_date_gaps ||--|{ bookings : date_gap_id
    packages ||--o{ package_update_logs : package_id
    packages ||--|{ bookings : package_id
    passenger_statuses ||--o{ passengers : passenger_status_id

